--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "next-themes": "^0.4.6",
-    "pocketbase": "^0.26.6",
+    "@supabase/supabase-js": "^2.45.4",
+    "@supabase/ssr": "^0.8.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
